--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "react-slick": "^0.29.0",
     "redux-typescript": "^1.2.1",
     "sass": "^1.58.3",
-    "scss": "^0.2.4",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.0"
@@ -55,7 +54,7 @@
   "devDependencies": {
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.7"
   }
 }
