--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
     "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.7"
   }
