--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/dotenv": "^8.2.0",
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-icons": "^3.0.0",
     "@types/react-redux": "^7.1.25",
+    "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
