--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "social",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dachev1919.github.io/your-movie",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@tailwindcss/line-clamp": "^0.4.2",
@@ -16,6 +17,7 @@
     "@types/react-redux": "^7.1.25",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
+    "gh-pages": "^5.0.0",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,6 +33,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
